feat: mutation for authority